--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "spatie/laravel-permission": "^5.6",
         "spatie/laravel-query-builder": "^5.1",
         "spatie/laravel-settings": "^2.6",
+        "stripe/stripe-php": "^14.4",
         "vemcogroup/laravel-translation": "^3.0"
     },
     "require-dev": {
